@@ -369,6 +369,15 @@ var gamefox_utils =
 
     return n == null || isNaN(n) ? 0 : n;
   },
+
+  linkToTopic: function(board, topic, page, tc, post)
+  {
+    return gamefox_lib.domain + gamefox_lib.path + 'genmessage.php?board='
+      + board + '&topic=' + topic
+      + (page ? '&page=' + page : '')
+      + (tc ? (page != 0 ? '&tc=' + tc : '') : '')
+      + (post ? '#p' + post : '');
+  }
 };
 
 String.prototype.gamefox_trim = function()
